--- a/src/main/resources/layout/base.fxml
+++ b/src/main/resources/layout/base.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="900.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="900.0" prefWidth="1200.0" stylesheets="@../css/baseStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.smartgh.view.ApplicationViewImpl">
     <top>
         <HBox alignment="CENTER" spacing="15.0" BorderPane.alignment="CENTER">
             <BorderPane.margin>
@@ -18,19 +17,13 @@
             <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                 <Image url="@../images/smartgh.png" />
             </ImageView>
-             <Label fx:id="titleLabel" text="Smart Greenhouse">
+             <Label text="Smart Greenhouse">
                  <font>
                      <Font name="System Bold" size="36.0" />
                  </font>
              </Label>
         </HBox>
     </top>
-    <center>
-        <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-            <BorderPane.margin>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </BorderPane.margin></Pane>
-    </center>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
