feat(homepage): add operation button

--- a/src/main/resources/css/baseStyle.css
+++ b/src/main/resources/css/baseStyle.css
@@ -53,7 +53,7 @@
 
 .button:hover, .toggle-button:selected, .toggle-button:hover, .outlined-btn:hover {
     -fx-font-weight: bold;
-    -fx-text-fill: #FFFFFF;
+    -fx-text-fill: #000000;
 }
 
 .normalButton {
