--- a/src/main/resources/layout/homepage.fxml
+++ b/src/main/resources/layout/homepage.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="transparentPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.smartgh.view.homepage.HomepageViewImpl">
+<ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="transparentPane" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.smartgh.view.homepage.HomepageViewImpl">
     <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5.0">
         <HBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
             <VBox.margin>
@@ -41,12 +46,32 @@
                 </Label>
             </VBox>
         </HBox>
-        <VBox alignment="CENTER_LEFT" fillWidth="false" maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-            <HBox spacing="5.0">
-                <Label styleClass="titleText" text="State:" />
-                <Label fx:id="statusLabel" styleClass="normalText" />
-            </HBox>
-        </VBox>
+        <GridPane>
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <Label styleClass="titleText" text="Stato serra:"/>
+            <Label fx:id="statusLabel" styleClass="normalText" text="NORMALE" GridPane.columnIndex="1"/>
+            <Button fx:id="operationButton" graphicTextGap="10.0" mnemonicParsing="false" text="Riepilogo operazioni"
+                    textAlignment="RIGHT" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+                <graphic>
+                    <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                        <Image url="@../images/operations.png"/>
+                    </ImageView>
+                </graphic>
+                <GridPane.margin>
+                    <Insets right="10.0"/>
+                </GridPane.margin>
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </padding>
+            </Button>
+        </GridPane>
     </VBox>
     <padding>
         <Insets bottom="5.0" />
