--- a/src/main/resources/layout/homepage_parameter.fxml
+++ b/src/main/resources/layout/homepage_parameter.fxml
@@ -9,60 +9,55 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<StackPane onMouseClicked="#parameterClicked" styleClass="card" stylesheets="@../css/baseStyle.css"
-           xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="it.unibo.smartgh.view.homepage.ParameterViewImpl">
+<StackPane onMouseClicked="#parameterClicked" styleClass="card" stylesheets="@../css/baseStyle.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.smartgh.view.homepage.ParameterViewImpl">
     <BorderPane>
         <top>
-            <Label fx:id="parameterName" styleClass="titleText" text="parameter" BorderPane.alignment="CENTER"/>
+            <Label fx:id="parameterName" styleClass="titleText" text="parameter" BorderPane.alignment="CENTER" />
         </top>
         <left>
-            <ImageView fx:id="parameterImg" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true"
-                       BorderPane.alignment="CENTER">
+            <ImageView fx:id="parameterImg" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                 <BorderPane.margin>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                 </BorderPane.margin>
             </ImageView>
         </left>
         <center>
             <GridPane BorderPane.alignment="CENTER">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0"/>
+                    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                 </rowConstraints>
-                <Label maxWidth="1.7976931348623157E308" text="Range ottimale: " GridPane.hgrow="ALWAYS"
-                       GridPane.vgrow="ALWAYS">
+                <Label maxWidth="1.7976931348623157E308" styleClass="normalText" text="Range ottimale: " GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0"/>
+                        <Insets left="10.0" right="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Label maxWidth="1.7976931348623157E308" text="2000 - 4000 Lux" GridPane.columnIndex="1"
-                       GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                <Label fx:id="optimalValueLabel" maxWidth="1.7976931348623157E308" styleClass="normalText" text="2000 - 4000 Lux" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0"/>
+                        <Insets left="10.0" right="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Label maxWidth="1.7976931348623157E308" text="Valore attuale:" GridPane.hgrow="ALWAYS"
-                       GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                <Label maxWidth="1.7976931348623157E308" styleClass="normalText" text="Valore attuale:" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0"/>
+                        <Insets left="10.0" right="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Label maxWidth="1.7976931348623157E308" text="1500 Lux" GridPane.columnIndex="1"
-                       GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                <Label maxWidth="1.7976931348623157E308" styleClass="normalText" text="1500 Lux" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0"/>
+                        <Insets left="10.0" right="10.0" />
                     </GridPane.margin>
                 </Label>
+            <BorderPane.margin>
+               <Insets left="20.0" right="20.0" />
+            </BorderPane.margin>
             </GridPane>
         </center>
         <padding>
-            <Insets bottom="10.0" left="20.0" right="20.0" top="10.0"/>
+            <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
         </padding>
     </BorderPane>
 </StackPane>
