--- a/src/main/resources/layout/homepage.fxml
+++ b/src/main/resources/layout/homepage.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="transparentPane" stylesheets="@../css/baseStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.smartgh.view.homepage.HomepageViewImpl">
+<ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="transparentPane" stylesheets="@../css/baseStyle.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.smartgh.view.homepage.HomepageViewImpl">
     <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
         <HBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
             <VBox.margin>
@@ -58,8 +58,14 @@
             <Label styleClass="titleText" text="Stato serra:">
             <GridPane.margin>
                <Insets right="10.0" />
-            </GridPane.margin></Label>
-            <Label fx:id="statusLabel" styleClass="normalText" text="NORMALE" GridPane.columnIndex="1" />
+            </GridPane.margin>
+            <padding>
+               <Insets bottom="5.0" right="5.0" top="5.0" />
+            </padding></Label>
+            <Label fx:id="statusLabel" styleClass="normalText" text="NORMALE" GridPane.columnIndex="1">
+            <padding>
+               <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+            </padding></Label>
             <Button graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#operationBtnClicked" text="Riepilogo operazioni" textAlignment="RIGHT" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                 <graphic>
                     <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
