--- a/src/main/resources/layout/homepage_parameter.fxml
+++ b/src/main/resources/layout/homepage_parameter.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane onMouseClicked="#parameterClicked" styleClass="card" stylesheets="@../css/baseStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.smartgh.view.homepage.ParameterViewImpl">
+<StackPane onMouseClicked="#parameterClicked" styleClass="card" stylesheets="@../css/baseStyle.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.smartgh.view.homepage.ParameterViewImpl">
     <BorderPane>
         <top>
             <Label fx:id="parameterName" styleClass="titleText" text="parameter" BorderPane.alignment="CENTER" />
@@ -40,16 +40,22 @@
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                     </GridPane.margin>
+               <padding>
+                  <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+               </padding>
                 </Label>
                 <Label maxWidth="1.7976931348623157E308" styleClass="normalText" text="Valore attuale:" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Label fx:id="currentValueLabel" maxWidth="1.7976931348623157E308" styleClass="normalText" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                <Label fx:id="currentValueLabel" styleClass="normalText" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                     </GridPane.margin>
+               <padding>
+                  <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+               </padding>
                 </Label>
             <BorderPane.margin>
                <Insets left="20.0" right="20.0" />
